MAJ des données
